# SDK-Fingerprint-sensor

./: README.md  debug_sensor.py  fingerprint.py  main.py  pyproject.toml  requirements.txt  run.sh  setup_jetson.sh  stream_server.py
app/: __init__.py  config.py  main.py
core/: __init__.py  interfaces.py  models.py
core/services/: __init__.py  database_service.py  fea_service.py  fingerprint_service.py  matching_engine.py
core/workers/: __init__.py  enrollment_worker.py  matching_worker.py  sensor_worker.py
data/: __init__.py  database.py  fingerprint.db
data/repositories/: __init__.py  fingerprint_repository.py  user_repository.py
fingerprint-sdk-c/: Makefile
fingerprint-sdk-c/src/: main.c
ui/: __init__.py  main_window.py
ui/dialogs/: __init__.py
ui/widgets/: __init__.py  ai_tab.py  database_tab.py  enrollment_tab.py  fingerprint_canvas.py  live_view_tab.py  matching_tab.py
web/: docker-compose.yml
web/backend/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
web/backend/models/: __init__.py  connection.py
web/backend/routers/: __init__.py  connection.py  fingerprint.py  terminal.py
web/backend/services/: __init__.py  fingerprint_service.py  ssh_service.py  terminal_service.py  usb_service.py
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/components/ConnectionPanel/: ConnectionPanel.css  (+2 more)
web/frontend/src/hooks/: useWebSocket.ts
web/frontend/src/services/: api.ts
web/frontend/src/types/: index.ts
(+8 files in other folders)
